# olm-api

./: .coderabbit.yml  .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-compose.dev.override.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.override.yml  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-and-push.yml  build-check.yml  ci-pipeline.yml  ci.yml  deploy.yml  e2e-tests.yml  format-and-lint.yml  run-tests.yml
alembic/: env.py
alembic/versions/: 0e74e87dcab1_create_settings_table.py  1710d1e6ebe6_initial_squashed_migration.py  66121df78c57_create_logs_table.py  f4b34ce33c88_enhance_log_model_with_details_prompt_.py
ollama/: Dockerfile
sdk/olm_api_client/: README.md  __init__.py  client.py  local_client.py  mock.py  protocol.py
sdk/olm_api_client/utils/: thinking_parser.py
sdk/olm_api_client/v1/: README.md  __init__.py  client.py  local_client.py  mock_client.py  protocol.py
sdk/olm_api_client/v2/: README.md  __init__.py  client.py  local_client.py  mock_client.py  protocol.py
sdk/olm_api_sdk/utils/: thinking_parser.py
sdk/olm_api_sdk/v1/: README.md  client.py  local_client.py  mock_client.py  protocol.py
sdk/olm_api_sdk/v2/: README.md  __init__.py  client.py  local_client.py  mock_client.py  protocol.py
src/: main.py  settings.py
src/api/routers/: generate.py  models.py
src/api/schemas/: models.py
src/api/services/: ollama.py
src/api/v1/: README.md  ollama_service_v1.py  router.py  schemas.py
src/api/v1/routers/: chat.py  generate.py  logs.py  models.py
src/api/v1/schemas/: __init__.py
src/api/v1/services/: ollama_service.py  setting_service.py
src/api/v2/: README.md  ollama_service_v2.py  router.py
src/api/v2/routers/: chat.py
src/api/v2/schemas/: message.py  request.py  response.py  tool.py
src/api/v2/services/: __init__.py  ollama_service.py
src/config/: app_state.py  settings.py
src/db/: database.py
src/db/models/: __init__.py  setting.py
src/dependencies/: common.py  logging.py
src/logs/: router.py  schemas.py
src/logs/templates/: logs.html
src/middlewares/: db_logging_middleware.py
src/models/: log.py
src/olm_api/: main.py
src/olm_api/api/v1/: README.md  ollama_service_v1.py  router.py  schemas.py
src/olm_api/api/v2/: README.md  ollama_service_v2.py  router.py
src/olm_api/config/: settings.py
src/olm_api/db/: database.py
src/olm_api/logs/: models.py  router.py
src/olm_api/middlewares/: db_logging_middleware.py
src/olm_api/utils/: thinking_parser.py
src/routers/: generate.py  models.py
src/services/: ollama.py
src/templates/: logs.html
src/utils/: thinking_parser.py
tests/: CLAUDE.md  conftest.py  test_main.py
tests/db/: conftest.py
tests/db/middlewares/: test_logging_middleware.py
tests/db/routers/: test_models_db.py
tests/e2e/: conftest.py  test_e2e_api.py  test_v2_api.py
tests/e2e/logs/: test_router.py
tests/e2e/v1/: test_generate_v1.py  test_streaming_v1.py  test_think_parameter_v1.py  test_v1_generate.py  test_v1_streaming.py
tests/e2e/v2/: test_compatibility.py  test_compatibility_v2.py  test_generate_v2.py  test_streaming_v2.py  test_think_parameter.py  test_think_parameter_v2.py  test_tools.py  test_validation.py  test_vision.py  test_vision_v2.py
tests/integration/: test_v1_v2_coexistence.py
tests/perf/: conftest.py  prompt.txt  test_batch_parallel.py  test_batch_sequential.py  test_concurrency.py  test_parallel.py  test_sequential.py
tests/perf/v1/: test_batch_parallel_v1.py  test_batch_sequential_v1.py
tests/perf/v2/: test_batch_parallel_v2.py  test_batch_sequential_v2.py
tests/routers/: test_generate.py  test_logs.py  test_models.py
tests/sdk/: conftest.py  test_client.py  test_init.py  test_local_client.py  test_mock.py  test_protocol.py  test_sdk_imports.py  test_thinking_parser.py
tests/sdk/v1/: test_client_sync_v1.py  test_client_v1.py  test_local_client.py  test_local_client_v1.py  test_mock.py  test_mock_v1.py  test_protocol_v1.py
tests/sdk/v2/: test_client_sync_v2.py  test_client_v2.py  test_local_client_v2.py  test_mock.py  test_mock_v2.py  test_protocol_v2.py
tests/unit/: conftest.py  test_thinking_parser.py
tests/unit/routers/: test_generate.py  test_models.py
tests/unit/v1/: test_generate_v1.py
(+6 files in other folders)
